--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="fas fa-bullhorn"></i></div>
-              <h4 class="title">Lorem Ipsum</h4>
+              <h3 class="title">Lorem Ipsum</h3>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="fas fa-cash-register"></i></div>
-              <h4 class="title">Perspiciatis</h4>
+              <h3 class="title">Perspiciatis</h3>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="fas fa-comments-dollar"></i></div>
-              <h4 class="title">Magni Dolores</h4>
+              <h3 class="title">Magni Dolores</h3>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="fas fa-couch"></i></div>
-              <h4 class="title">Nemo Enim</h4>
+              <h3 class="title">Nemo Enim</h3>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
             </div>
           </div>
@@ -90,25 +90,25 @@
         <div class="container aos-init aos-animate" data-aos="fade-up">
           <div class="row">
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp">
+              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp" alt="mkt">
                 <div class="card-body">
-                  <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                  <h3 class="card-title">Lorem ipsum dolor sit</h3>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                   <a href="#" class="btn btn-primary">Ver más →</a> </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp">
+              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp" alt="mkt">
                 <div class="card-body">
-                  <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                  <h3 class="card-title">Lorem ipsum dolor sit</h3>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                   <a href="#" class="btn btn-primary">Ver más →</a> </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp">
+              <div class="card" style="width:400px"> <img class="card-img-top" src="assets/img/mkt-inmobiliario.webp" alt="mkt">
                 <div class="card-body">
-                  <h4 class="card-title">Lorem ipsum dolor sit</h4>
+                  <h3 class="card-title">Lorem ipsum dolor sit</h3>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                   <a href="#" class="btn btn-primary">Ver más →</a> </div>
               </div>
@@ -123,14 +123,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <h4 class="text-uppercase mb-4">Habitt Digital</h4>
+        <h3 class="text-uppercase mb-4">Habitt Digital</h3>
         <p class="lead mb-0"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec quam pretium, dictum nibh nec, consectetur nisl. </p>
       </div>
       <div class="col-lg-4 mb-5 mb-lg-0">
-        <h4 class="text-uppercase mb-4">Síguenos en:</h4>
+        <h3 class="text-uppercase mb-4">Síguenos en:</h3>
         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a> <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a> <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a> </div>
       <div class="col-lg-4 mb-5 mb-lg-0">
-        <h4 class="text-uppercase mb-4">Encuentranos en:</h4>
+        <h3 class="text-uppercase mb-4">Encuentranos en:</h3>
         <p class="lead mb-0"> Lago Zurich 219 <br />
           Ciudad de México </p>
       </div>
